Remove code smell PR2